--- a/esp/data/index.html
+++ b/esp/data/index.html
@@ -53,7 +53,7 @@
               <label>Password</label>
               <input name="password" type="text" v-model='wifipass' length=64 placeholder="Your wifi password">
             </div>
-           <button class="btn" type="button" id="connect" v-on:click="jsPost('set','online')">Connect</button>
+           <button class="btn" type="button" id="connect" v-on:click="jsPost('set','connect')">Connect</button>
 
            <!-- advanced -->
            <hr />
