Use async ajax javascript

--- a/esp/data/index.html
+++ b/esp/data/index.html
@@ -17,9 +17,8 @@
           <img id="toplogo" src="images/sck.png">
         </a>
         SCK 2.0
-      </div>
 
-      <div id="toast-wrapper" class="sticky">
+        <div id="toast-wrapper"></div>
       </div>
 
       <div class="content">
