--- a/esp/data/index.html
+++ b/esp/data/index.html
@@ -10,7 +10,7 @@
       <h1 style="color:#38cef3; font-family:Arial, sans-serif; padding:100px 10px;">The page is loading... please wait!</h1>
     </div>
 
-    <div class="container" id="app">
+    <div class="container"id="app" style="display:none">
 
       <div class="topnav sticky ">
         <div class="bg-blue">
@@ -31,7 +31,7 @@
 
           <div id="topinfo">
             <a v-show="currentPage === 0" v-on:click='gotoPage(6)'>
-              <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 100 125" style="enable-background:new 0 0 100 100;" xml:space="preserve"><g><g><g><path d="M53.1,73h-7.2c-1.1,0-1.9-0.9-1.9-1.9V44h11v27.1C55,72.1,54.1,73,53.1,73z"/></g></g></g><g><g><g><path d="M55,39H44v-9.1c0-1.1,0.9-1.9,1.9-1.9h7.2c1.1,0,1.9,0.9,1.9,1.9V39z"/></g></g></g><g><path d="M50,96C24.6,96,4,75.4,4,50S24.6,4,50,4s46,20.6,46,46S75.4,96,50,96z M50,12c-21,0-38,17-38,38s17,38,38,38s38-17,38-38   S71,12,50,12z"/></g></svg>
+              <svg width="29px" height="32px" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 100 125" style="enable-background:new 0 0 100 100;" xml:space="preserve"><g><g><g><path d="M53.1,73h-7.2c-1.1,0-1.9-0.9-1.9-1.9V44h11v27.1C55,72.1,54.1,73,53.1,73z"/></g></g></g><g><g><g><path d="M55,39H44v-9.1c0-1.1,0.9-1.9,1.9-1.9h7.2c1.1,0,1.9,0.9,1.9,1.9V39z"/></g></g></g><g><path d="M50,96C24.6,96,4,75.4,4,50S24.6,4,50,4s46,20.6,46,46S75.4,96,50,96z M50,12c-21,0-38,17-38,38s17,38,38,38s38-17,38-38   S71,12,50,12z"/></g></svg>
             </a>
           </div>
 
@@ -307,9 +307,18 @@
       </div><!-- /content -->
     </div><!-- container -->
 
-    <script src="vue.min.js" type="text/javascript" charset="utf-8" ></script>
-    <script src="main.js" type="text/javascript" charset="utf-8"></script>
-    <link rel="stylesheet" href="css.css" type="text/css" />
+<!-- gulp will inject the following and create a index.html.gz -->
+<style>
+/* inject css.css */
+</style>
+
+<script type="text/javascript" charset="utf-8" >
+// inject vue.min.js
+</script>
+
+<script type="text/javascript" charset="utf-8">
+// inject main.js
+</script>
 
   </body>
 </html>
