CSS Wider screen, responsive

--- a/esp/data/index.html
+++ b/esp/data/index.html
@@ -190,15 +190,11 @@
         <br />
         <br />
 
-        <div class="text-center text-grey font80">
+        <div v-show="showDebug" class="text-center text-grey font80">
           {{ version }}
           <hr />
           {{ currentPage }} - {{ page[currentPage].footer }}
         </div>
-
-        <br />
-
-
 
         <!-- experimental -->
 
@@ -323,7 +319,7 @@ body {
 }
 .container {
   margin: 0 auto;
-  max-width: 400px;
+  max-width: 900px;
 }
 form .field-group {
   box-sizing: border-box;
@@ -437,7 +433,7 @@ td{
   text-align: center;
 }
 .content{
-  padding: 10px 5px 20px;
+  padding: 10px 10px 20px;
 }
 .font70{
   font-size: 70%;
@@ -581,6 +577,7 @@ var app = new Vue({
     sdlog: false,
     usertoken: '',
     version: 'SCK 2.0 / SAM V0.0.2 / ESP V0.0.2',
+    weHaveTriedConnecting: false,
     wifiname: '',
     wifipass: '',
     wifisync: true,
@@ -651,7 +648,10 @@ var app = new Vue({
         }
       }
       xmlHttp.onerror = function(e){
-        that.notify('Cannot access API', 5000, 'bg-red');
+        // Don't show this error, if we have tried connecting. Only on real API failures
+        if (!that.weHaveTriedConnecting) {
+          that.notify('Cannot access API', 5000, 'bg-red');
+        }
       }
       xmlHttp.open( "GET", theUrl, true ); // false for synchronous request, true = async
       xmlHttp.send( null );
@@ -680,7 +680,8 @@ var app = new Vue({
       // /set?ssid=value1&password=value2&token=value3&epoch=value
 
       if (purpose == 'connect'){
-        this.notify('Connecting online...', 2000);
+        this.weHaveTriedConnecting = true;
+        this.notify('Kit is trying to connect online...', 2000);
         that.httpGet(that.theApi + path +
             '?ssid=' + that.selectedWifi +
             '&password=' + that.wifipass +
