Copy text to clipboard

--- a/esp/data/index.html
+++ b/esp/data/index.html
@@ -171,6 +171,9 @@
             </ul>
           </div>
 
+          <button id="copied-notification" class="btn bg-cyan" type="button" v-on:click="copyTextToClipboard()">Copy info to clipboard</button>
+          <textarea name="" id='hiddenText' style='opacity:0; transform: scale(0); position: absolute; bottom:10%' rows="8" cols="40"></textarea>
+
           <div id="id-logging">
             <hr />
             <p>Log:</p>
@@ -180,6 +183,7 @@
               </li>
             </ul>
           </div>
+
 
         </div>
 
@@ -617,6 +621,17 @@ var app = new Vue({
     this.periodic(9000);
   },
   methods: {
+    copyTextToClipboard: function(containerid){
+      // We need to copy the text temporary into a textBox to be able to copy it to clipboard.
+      var textToCopy = document.getElementById('kitinfo').innerText;
+      var textBox = document.getElementById('hiddenText');
+      textBox.innerText = textToCopy;
+
+      textBox.select();
+      document.execCommand('copy');
+
+      document.getElementById('copied-notification').innerHTML = 'Text copied!'
+    },
     periodic: function (ms) {
       var that = this;
 
@@ -650,7 +665,7 @@ var app = new Vue({
       xmlHttp.onerror = function(e){
         // Don't show this error, if we have tried connecting. Only on real API failures
         if (!that.weHaveTriedConnecting) {
-          that.notify('Cannot access API', 5000, 'bg-red');
+          that.notify('Your kit is not responding', 5000, 'bg-red');
         }
       }
       xmlHttp.open( "GET", theUrl, true ); // false for synchronous request, true = async
