--- a/esp/data/index.html
+++ b/esp/data/index.html
@@ -98,8 +98,8 @@
           <p>Your kit is now trying to connect to the online platform, and this website has no connection to the kit anymore.</p>
           <p>Check the light on your Kit:</p>
           <ul>
-            <li><span style="color:green">GREEN</span>: Everything is fine, your Kit is online.</li>
-            <li><span style="color:red">RED</span>: Some problem happened, push the button on your Kit and join the SCK WiFi again.</li>
+            <li><span class="text-green" >GREEN</span>: Everything is fine, your Kit is online.</li>
+            <li><span class="text-red" >RED</span>: Some problem happened, push the button on your Kit and join the SCK WiFi again.</li>
           </ul>
         </div>
 
@@ -390,6 +390,9 @@ td{
   padding:10px;
   border-bottom: 1px solid #ddd;
 }
+a{
+  cursor:pointer;
+}
 
 .btn{
   border-radius: 30px;
@@ -410,7 +413,7 @@ td{
   background-color: #065063 !important;
 }
 .bg-cyan{
-  background-color: #38cef3 !important;
+  background-color: #4fc3f7 !important;
   color:white;
 }
 .bg-red{
@@ -420,11 +423,14 @@ td{
   background: #C8E6ED;
   color: #8db2ba;
 }
+.text-green{
+  color: #4caf50 !important;
+}
 .text-cyan{
-  color: #38cef3 !important;
+  color: #4fc3f7 !important;
 }
 .text-red{
-  color: rgb(244,67,54);
+  color: #ff5722;
 }
 .text-grey{
   color: #ccc;
@@ -501,7 +507,7 @@ td{
 }
 
 .toast {
-  background-color: green;
+  background-color: #4caf50;
   color: #000;
   padding: 10px;
   margin: 2px 0px;
