Disable periodic checking of API

--- a/esp/data/index.html
+++ b/esp/data/index.html
@@ -632,7 +632,7 @@ var app = new Vue({
     this.jsGet('status');
 
     // This checks if connection to the kit has been lost, every X sec
-    this.periodic(9000);
+    //this.periodic(9000);
   },
   methods: {
     copyTextToClipboard: function(containerid){
